HTML design for the side bar section

--- a/index.html
+++ b/index.html
@@ -10,11 +10,63 @@
 			href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;500;600;700;800;900&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
+		/>
 		<link rel="stylesheet" href="./assets/css/styles.css" />
 		<link rel="stylesheet" href="./assets/css/mediaQuerry.css" />
 		<title>Dairy Business</title>
 	</head>
 	<body>
+		<div class="container">
+			<div class="side-bar">
+				<div class="logo">
+					<div class="logo-img">
+						<img src="./assets/images/Logo.png" alt="Image Logo" />
+					</div>
+					<h1>Dairy Farm</h1>
+				</div>
+				<div class="admin-profile">
+					<div class="admin-profile-img">
+						<img src="./assets/images/admin.jpg" alt="Admin Profile" />
+					</div>
+					<h2>John Doe</h2>
+				</div>
+				<div class="sidebar-options">
+					<h3>General Section</h3>
+					<div class="list-option">
+						<ul>
+							<li>
+								<span class="material-symbols-rounded"> home </span
+								><button class="btn-options">Dashboard</button>
+							</li>
+							<li>
+								<span class="material-symbols-rounded"> feed </span
+								><button class="btn-options">Information</button>
+							</li>
+							<li>
+								<span class="material-symbols-rounded"> monitoring </span
+								><button class="btn-options">Monitoring</button>
+							</li>
+							<li>
+								<span class="material-symbols-rounded"> payments </span
+								><button class="btn-options">Sales</button>
+							</li>
+							<li>
+								<span class="material-symbols-rounded"> shopping_cart </span
+								><button class="btn-options">Milk Collection</button>
+							</li>
+							<li>
+								<span class="material-symbols-rounded"> groups </span
+								><button class="btn-options">Employees</button>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+
 		<script src="./assets/js/app.js"></script>
 	</body>
 </html>
