Adding navbar with user details html

--- a/index.html
+++ b/index.html
@@ -65,6 +65,25 @@
 					</div>
 				</div>
 			</div>
+			<div class="right-side-container">
+				<div class="nav-bar">
+					<div class="nav-menu">
+						<button id="close-open">
+							<span class="material-symbols-rounded"> menu_open </span>
+						</button>
+					</div>
+					<div class="nav-profile">
+						<div class="nav-profile-img">
+							<img src="" alt="" />
+						</div>
+						<h3>John Doe</h3>
+						<button id="drop-down">
+							<span class="material-symbols-rounded"> arrow_drop_down </span>
+						</button>
+					</div>
+				</div>
+				<div class="dashboard"></div>
+			</div>
 		</div>
 
 		<script src="./assets/js/app.js"></script>
