styling the profile icon and logo on the dash board

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
 					<div class="admin-profile-img">
 						<img src="./assets/images/admin.jpg" alt="Admin Profile" />
 					</div>
-					<h2>John Doe</h2>
+					<div class="welcome">
+						<h4>Welcome,</h4>
+						<h2>John Doe</h2>
+					</div>
 				</div>
 				<div class="sidebar-options">
 					<h3>General Section</h3>
