side bar styling and design worcking complet design

--- a/index.html
+++ b/index.html
@@ -41,28 +41,38 @@
 					<div class="list-option">
 						<ul>
 							<li>
-								<span class="material-symbols-rounded"> home </span
-								><button class="btn-options">Dashboard</button>
+								<button class="btn-options">
+									<span class="material-symbols-rounded"> home </span>Dashboard
+								</button>
 							</li>
 							<li>
-								<span class="material-symbols-rounded"> feed </span
-								><button class="btn-options">Information</button>
+								<button class="btn-options">
+									<span class="material-symbols-rounded"> feed </span
+									>Information
+								</button>
 							</li>
 							<li>
-								<span class="material-symbols-rounded"> monitoring </span
-								><button class="btn-options">Monitoring</button>
+								<button class="btn-options">
+									<span class="material-symbols-rounded"> monitoring </span
+									>Monitoring
+								</button>
 							</li>
 							<li>
-								<span class="material-symbols-rounded"> payments </span
-								><button class="btn-options">Sales</button>
+								<button class="btn-options">
+									<span class="material-symbols-rounded"> payments </span>Sales
+								</button>
 							</li>
 							<li>
-								<span class="material-symbols-rounded"> shopping_cart </span
-								><button class="btn-options">Milk Collection</button>
+								<button class="btn-options">
+									<span class="material-symbols-rounded"> shopping_cart </span
+									>Milk Collection
+								</button>
 							</li>
 							<li>
-								<span class="material-symbols-rounded"> groups </span
-								><button class="btn-options">Employees</button>
+								<button class="btn-options">
+									<span class="material-symbols-rounded"> groups </span
+									>Employees
+								</button>
 							</li>
 						</ul>
 					</div>
