Update for the navbar styling

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 					</div>
 				</div>
 			</div>
+			<!-- Dashboard section Complete information -->
 			<div class="right-side-container">
 				<div class="nav-bar">
 					<div class="nav-menu">
@@ -87,7 +88,7 @@
 					</div>
 					<div class="nav-profile">
 						<div class="nav-profile-img">
-							<img src="" alt="" />
+							<img src="./assets/images/admin.jpg" alt="Admin profile IMG" />
 						</div>
 						<h3>John Doe</h3>
 						<button id="drop-down">
