designng the dashboard card elements

--- a/index.html
+++ b/index.html
@@ -98,7 +98,60 @@
 						</button>
 					</div>
 				</div>
-				<div class="dashboard"></div>
+				<div class="dashboard">
+					<!-- The Dashboard section design Information -->
+					<div class="dashboard-section">
+						<div class="data-info-cards">
+							<div class="data-cards">
+								<div class="total-staff">
+									<span>icon</span>
+									<h3>Total Staff</h3>
+								</div>
+								<h1>900</h1>
+								<div class="employ-weeks">
+									<span>4%</span>
+									<h3>From Last Week</h3>
+								</div>
+							</div>
+							<div class="data-cards">
+								<div class="total-staff">
+									<span>icon</span>
+									<h3>Total Cows</h3>
+								</div>
+								<h1>2,000</h1>
+								<div class="employ-weeks">
+									<span>icon</span>
+									<span>34%</span>
+									<h3>From Last Week</h3>
+								</div>
+							</div>
+							<div class="data-cards">
+								<div class="total-staff">
+									<span>icon</span>
+									<h3>Total collected Milk</h3>
+								</div>
+								<h1>5,000</h1>
+								<div class="employ-weeks">
+									<span>icon</span>
+									<span>12%</span>
+									<h3>From Last Week</h3>
+								</div>
+							</div>
+							<div class="data-cards">
+								<div class="total-staff">
+									<span>icon</span>
+									<h3>Total Sold Milk</h3>
+								</div>
+								<h1>900</h1>
+								<div class="employ-weeks">
+									<span>icon</span>
+									<span>12%</span>
+									<h3>From Last Week</h3>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 
