--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 			href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;500;600;700;800;900&family=Oleo+Script:wght@400;700&display=swap"
 			rel="stylesheet"
 		/>
+
 		<link
 			rel="stylesheet"
 			href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
@@ -43,12 +44,12 @@
 					<div class="list-option">
 						<ul>
 							<li>
-								<button class="btn-options">
+								<button onclick="dashboardPage()" class="btn-options">
 									<span class="material-symbols-rounded"> home </span>Dashboard
 								</button>
 							</li>
 							<li>
-								<button class="btn-options">
+								<button onclick="InformationPage()" class="btn-options">
 									<span class="material-symbols-rounded"> feed </span
 									>Information
 								</button>
@@ -104,52 +105,66 @@
 						<div class="data-info-cards">
 							<div class="data-cards">
 								<div class="total-staff">
-									<span>icon</span>
+									<img
+										src="https://img.icons8.com/ios-glyphs/30/000000/person-male.png"
+									/>
 									<h3>Total Staff</h3>
 								</div>
 								<h1>900</h1>
 								<div class="employ-weeks">
-									<span>4%</span>
+									<span class="percent">4%</span>
 									<h3>From Last Week</h3>
 								</div>
 							</div>
+							<div class="empty-line"></div>
+
 							<div class="data-cards">
 								<div class="total-staff">
-									<span>icon</span>
+									<img
+										src="https://img.icons8.com/ios-glyphs/30/000000/cow-breed.png"
+									/>
 									<h3>Total Cows</h3>
 								</div>
-								<h1>2,000</h1>
+								<h1 class="cows">2,000</h1>
 								<div class="employ-weeks">
-									<span>icon</span>
-									<span>34%</span>
+									<span class="material-symbols-rounded"> arrow_drop_up </span>
+									<span class="percent">34%</span>
 									<h3>From Last Week</h3>
 								</div>
 							</div>
+							<div class="empty-line"></div>
 							<div class="data-cards">
 								<div class="total-staff">
-									<span>icon</span>
+									<img
+										src="https://img.icons8.com/external-febrian-hidayat-glyph-febrian-hidayat/30/000000/external-funnel-user-interface-febrian-hidayat-glyph-febrian-hidayat.png"
+									/>
 									<h3>Total collected Milk</h3>
 								</div>
 								<h1>5,000</h1>
 								<div class="employ-weeks">
-									<span>icon</span>
-									<span>12%</span>
+									<span class="material-symbols-rounded"> arrow_drop_up </span>
+									<span class="percent">12%</span>
 									<h3>From Last Week</h3>
 								</div>
 							</div>
+							<div class="empty-line"></div>
+
 							<div class="data-cards">
 								<div class="total-staff">
-									<span>icon</span>
+									<img
+										src="https://img.icons8.com/external-febrian-hidayat-glyph-febrian-hidayat/30/000000/external-funnel-user-interface-febrian-hidayat-glyph-febrian-hidayat.png"
+									/>
 									<h3>Total Sold Milk</h3>
 								</div>
-								<h1>900</h1>
+								<h1 class="sold">9,500</h1>
 								<div class="employ-weeks">
-									<span>icon</span>
-									<span>12%</span>
+									<span class="material-symbols-rounded"> arrow_drop_up </span>
+									<span class="percent">12%</span>
 									<h3>From Last Week</h3>
 								</div>
 							</div>
 						</div>
+						<div id="data-renderd"></div>
 					</div>
 				</div>
 			</div>
