Production of mik in a day and data entry

--- a/index.html
+++ b/index.html
@@ -165,64 +165,18 @@
 						</div>
 						<div id="data-renderd">
 							<div class="dashboard-section">
-								<h1>This week Best Breed</h1>
-								<div class="card-cows">
-									<div class="breed-card">
-										<div class="cow-img">
-											<img src="./assets/images/Ayrshire.jpg" alt="" />
-										</div>
-										<div class="container-card">
-											<div class="empty-card"></div>
-											<div class="text-element">
-												<div class="icons-elements">
-													<span class="material-symbols-rounded">
-														arrow_drop_up
-													</span>
-													<p><span> 16%</span> Litres</p>
-												</div>
-												<p>Ayrshire</p>
-												<h6>Health Status: <span>Healthy</span></h6>
-											</div>
-										</div>
-									</div>
-									<div class="breed-card">
-										<div class="cow-img">
-											<img src="./assets/images/Brown-Swiss.jpg" alt="" />
-										</div>
-										<div class="container-card">
-											<div class="empty-card"></div>
-											<div class="text-element">
-												<div class="icons-elements">
-													<span class="material-symbols-rounded">
-														arrow_drop_up
-													</span>
-													<p><span> 16%</span> Litres</p>
-												</div>
-												<p>Brown-Swiss</p>
-												<h6>Health Status: <span>Healthy</span></h6>
-											</div>
-										</div>
-									</div>
-									<div class="breed-card">
-										<div class="cow-img">
-											<img src="./assets/images/Jersey.jpg" alt="" />
-										</div>
-										<div class="container-card">
-											<div class="empty-card"></div>
-											<div class="text-element">
-												<div class="icons-elements">
-													<span class="material-symbols-rounded">
-														arrow_drop_up
-													</span>
-													<p><span> 16%</span> Litres</p>
-												</div>
-												<p>Jersey</p>
-												<h6>Health Status: <span>Healthy</span></h6>
-											</div>
-										</div>
-									</div>
-								</div>
+								<h1>Production Report</h1>
 							</div>
+							<div class="production-section">
+								<div class="empty-div">
+									<label for="Enter ">Buying Rate</label>
+									<input type="text" placeholder="Brookside Buying Rate" />
+								</div>
+								<button id="show-total" onclick="totalProduction1()">
+									Total Production
+								</button>
+							</div>
+							<div id="test"></div>
 						</div>
 					</div>
 				</div>
