Production design input  complete

--- a/index.html
+++ b/index.html
@@ -176,7 +176,45 @@
 									Total Production
 								</button>
 							</div>
-							<div id="test"></div>
+							<div id="test">
+								<div class="production-data-day">
+									<table>
+										<tr>
+											<th>Shed Letter</th>
+
+											<th>Numbers of Litres</th>
+
+											<th>Duration</th>
+										</tr>
+										<tr>
+											<td>A</td>
+											<td>510</td>
+											<td>A day</td>
+										</tr>
+										<tr>
+											<td>B</td>
+											<td>510</td>
+											<td>A day</td>
+										</tr>
+										<tr>
+											<td>C</td>
+											<td>510</td>
+											<td>A day</td>
+										</tr>
+										<tr>
+											<td>D</td>
+											<td>510</td>
+											<td>A day</td>
+										</tr>
+									</table>
+									<div class="sum-production">
+										<div class="emty"></div>
+										<div class="total">
+											Total production in Litres: <span>6787</span>
+										</div>
+									</div>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
