--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
 											<span id="prod-total">6787</span>
 										</div>
 									</div>
+									<div id="time-div"></div>
 								</div>
 							</div>
 						</div>
