--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 							</li>
 							<li>
 								<button onclick="salesInYears()" class="btn-options">
-									<span class="material-symbols-rounded"> payments </span>Sales
+									<span class="material-symbols-rounded"> payments </span
+									>Monthly Sales
 								</button>
 							</li>
 							<li>
